Added generate with new format. Added constant for generated format

--- a/config
+++ b/config
@@ -17,6 +17,7 @@ fi
 # our standard config
 SITES_DIR=$HTPASS_DIR/sites
 SITES_DIR_FORMAT="$SITES_DIR/.%s.rules"
+SITES_COMPLETE_DIR_FORMAT="$SITES_DIR/%s"
 USER_DIR=$HTPASS_DIR/users
 USER_DIR_FORMAT="$USER_DIR/%s"
 USER_RULE_FORMAT="%s"
