Added new filenames for users (`.$user.rules`)

--- a/config
+++ b/config
@@ -19,8 +19,12 @@ SITES_DIR=$HTPASS_DIR/sites
 SITES_DIR_FORMAT="$SITES_DIR/.%s.rules"
 SITES_COMPLETE_DIR_FORMAT="$SITES_DIR/%s"
 USER_DIR=$HTPASS_DIR/users
-USER_DIR_FORMAT="$USER_DIR/%s"
+USER_DIR_FORMAT="$USER_DIR/.%s.rules"
+USER_DIR_FORMAT_DELIM=","
+USER_COMPLETE_DIR_FORMAT="$USER_DIR/%s"
 USER_RULE_FORMAT="%s"
+
+
 GROUP_DIR=$HTPASS_DIR/groups
 GROUP_DIR_FORMAT="$GROUP_DIR/%s"
 GROUP_RULE_FORMAT="@%s"
