--- a/config
+++ b/config
@@ -10,6 +10,12 @@ then
     personal_config_errors=true
 fi
 
+if [ -z "$NGGROUP_SERVER_ROOT_URL" ];
+then
+    echo 'Error: Constant $NGGROUP_ROOT_URL not set in \`personal_config\`'
+    personal_config_errors=true
+fi
+
 if [ -z "$NGGROUP_SERVER_ADMIN_EMAIL" ];
 then
     echo 'Error: Constant $NGGROUP_SERVER_ADMIN_EMAIL not set in \`personal_config\`'
