--- a/config
+++ b/config
@@ -27,6 +27,9 @@ then
     exit 1
 fi
 
+. "$DIR/email_config"
+
+
 
 # only provide debugging info if we're not in production mode
 debug() {
@@ -48,6 +51,7 @@ fi
 SITES_DIR=$HTPASS_DIR/sites
 SITES_DIR_FORMAT="$SITES_DIR/.%s.rules"
 SITES_COMPLETE_DIR_FORMAT="$SITES_DIR/%s"
+
 USER_DIR=$HTPASS_DIR/users
 USER_DIR_FORMAT="$USER_DIR/.%s.rules"
 USER_DIR_FORMAT_DELIM=","
@@ -59,3 +63,5 @@ GROUP_DIR=$HTPASS_DIR/groups
 GROUP_DIR_FORMAT="$GROUP_DIR/%s"
 GROUP_RULE_FORMAT="@%s"
 TMP_FILE=/tmp/nggrouptmp
+
+EMAIL_NEW_USERS=true
