--- a/config
+++ b/config
@@ -59,7 +59,7 @@ GROUP_DIR_FORMAT="$GROUP_DIR/%s"
 GROUP_RULE_FORMAT="@%s"
 TMP_FILE=/tmp/nggrouptmp
 
-SEND_EMAILS=false
+SEND_EMAILS=true
 
 if [  $SEND_EMAILS ];
 then
