Emails are now in their own separate directory and scripts - easier to add in custom handlers

--- a/config
+++ b/config
@@ -59,6 +59,9 @@ GROUP_DIR_FORMAT="$GROUP_DIR/%s"
 GROUP_RULE_FORMAT="@%s"
 TMP_FILE=/tmp/nggrouptmp
 
+EMAILS_DIR=$DIR/emails
+EMAILS_DIR_FORMAT="$EMAILS_DIR/%s"
+
 SEND_EMAILS=false
 
 if [  $SEND_EMAILS ];
